Refactor and Profile function is introduced.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,12 @@
+base.url = https://online-languagelearning.herokuapp.com
+
 logging.level.com.sec = DEBUG
 
 # Thymeleaf 
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache = false
 
 # postgresql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = update
 
 #Email
 spring.mail.host: smtp.acetelecom.hu
