--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.sec</groupId>
-	<artifactId>sec</artifactId>
+	<groupId>com.online</groupId>
+	<artifactId>language.learning</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
 
-	<name>Sec</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Online-language-learning</name>
+	<description>Online Language Learning project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -77,12 +77,6 @@
 	        <artifactId>jaxb-api</artifactId>
 	        <version>2.3.0</version>
 		</dependency>
-  	
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.h2database</groupId> -->
-<!-- 			<artifactId>h2</artifactId> -->
-<!-- 			<scope>runtime</scope> -->
-<!-- 		</dependency> -->
   		
 	</dependencies>
 
