Rest API example is added.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.mvc.locale = hu
 spring.thymeleaf.cache = false
 
 # postgresql
-spring.datasource.url = jdbc:postgresql://localhost:5432/sfj
+spring.datasource.url = jdbc:postgresql://localhost:5432/online
 spring.datasource.username = postgres
 spring.datasource.password = 800519
 spring.datasource.driver-class-name = org.postgresql.Driver
