--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
 	        <artifactId>jaxb-api</artifactId>
 	        <version>2.3.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20200518</version>
+		</dependency>
 	</dependencies>
 
 	<build>
